Fix logo on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -176,9 +176,6 @@
     .about-right{
         margin-top: 0
     }
-	.logo img {
-		width: 50%;
-	}
 	.navbar-toggler span {
 		color: #fff;
 		font-size: 25px;
